--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
 	<script src="./app/app.module.js"></script>
 	<script src="./app/app.route.js"></script>
 	<script src="./app/service/ROUTER_CONSTANT.js"></script>
-	<script src="./app/service/urlConstant.js"></script>
-	<script src="app/service/userService.js"></script>
-	<script src="./app/configure.js"></script>
+	<script src="app/service/UrlConstant.js"></script>
+	<script src="app/service/UserService.js"></script>
+	<script src="app/APP_CONFIGURE.js"></script>
 	<!--end of basic setting-->
 
 	<!--basic component -->
@@ -40,8 +40,8 @@
 	<!--end of basic component-->
 
 	<!--following is customized component-->
-	<script src="./app/user/home/home.component.js"></script>
-	<script src="./app/user/home/home.factory.js"></script>
+	<script src="app/show/home/home.component.js"></script>
+	<script src="app/show/home/home.factory.js"></script>
 	<!--end of customized component-->
 </body>
 </html> 
