add nested express support ,fix log view

--- a/public/app/show/home/home.html
+++ b/public/app/show/home/home.html
@@ -1,3 +1,69 @@
 <md-content layout-fill>
-    home
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
+    home<br/>
 </md-content>
