--- a/public/app/show/show.html
+++ b/public/app/show/show.html
@@ -25,8 +25,8 @@
             </md-content>
         </md-content>
     </md-sidenav>
-    <md-content layout-fill layout="column">
+    <md-content layout-fill layout="column" style="overflow-y: hidden!important;">
         <xx-toolbar></xx-toolbar>
-        <ui-view layout-fill></ui-view>
+        <ui-view layout-fill ></ui-view>
     </md-content>
 </md-content>
