add ngAnimate support

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
 	<script src="./angular-messages/angular-messages.min.js"></script>
 	<script src="./@uirouter/angularjs/release/angular-ui-router.min.js"></script>
 	<script src="./angular-cookies/angular-cookies.min.js"></script>
+	<script src="./angular-animate/angular-animate.min.js"></script>
+
+	<script src="./angular-cookies/angular-cookies.min.js"></script>
 	<!--end of local library-->
 	<!--basic setting-->
 	<script src="./app/app.module.js"></script>
