add mockHttp support

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
 	<script src="./app/service/ROUTER_CONSTANT.js"></script>
 	<script src="app/service/UrlConstant.js"></script>
 	<script src="app/service/UserService.js"></script>
+	<script src="app/service/Util.js"></script>
+	<script src="app/service/MockHttp.js"></script>
 	<script src="app/APP_CONFIGURE.js"></script>
 	<!--end of basic setting-->
 
