--- a/public/app/show/show.html
+++ b/public/app/show/show.html
@@ -1,4 +1,4 @@
-<md-content layout="row" layout-fill>
+<md-content layout="row" layout-fill >
     <md-sidenav
             class="md-sidenav-left"
             md-component-id="left"
@@ -25,8 +25,8 @@
             </md-content>
         </md-content>
     </md-sidenav>
-    <md-content layout-fill layout="column" style="overflow-y: hidden!important;">
+    <md-content layout-fill layout="column" class="hidey">
         <xx-toolbar></xx-toolbar>
-        <ui-view layout-fill ></ui-view>
+        <ui-view layout-fill flex></ui-view>
     </md-content>
 </md-content>
