--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./angular-material/angular-material.min.css"/>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="./style.css"/>
 </head>
-<body style="overflow-y: hidden !important">
+<body class="hidey">
 	<ui-view></ui-view>
 	<!--google remote library-->
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>-->
@@ -47,6 +48,7 @@
 	<!--following is customized component-->
 	<script src="app/show/home/home.component.js"></script>
 	<script src="app/show/home/home.factory.js"></script>
+	<script src="app/show/goods/goods.component.js"></script>
 	<!--end of customized component-->
 </body>
 </html> 
